* Moving sln file to root of repository * Updating build.cmd to the latest from Universe\build_templates * Updating sln to include k10 \ net45 solution folders

--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -1,5 +1,5 @@
 {
-  "version" : "0.1-pre-*",
+  "version" : "0.1-alpha-*",
   "dependencies": {
     "Microsoft.AspNet.DependencyInjection" : "0.1-alpha-*"
   },
