--- a/src/Microsoft.AspNet.Identity.InMemory/project.json
+++ b/src/Microsoft.AspNet.Identity.InMemory/project.json
@@ -1,17 +1,11 @@
 {
   "version" : "0.1-alpha-*",
   "dependencies": {
-    "System.Collections.Immutable" : "1.1.15.0",
     "Microsoft.AspNet.Identity" : "0.1-alpha-*",
     "System.Security.Claims" : "0.1-alpha-*"
   },
   "configurations": {
-    "net45": {
-      "dependencies": {
-        "System.Runtime" : "",
-        "System.Collections" : ""
-      }
-    },
+    "net45": {},
     "k10": {}
   }
 }
