--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -6,12 +6,7 @@
     "System.Security.Claims" : "0.1-alpha-*"
   },
   "configurations": {
-    "net45": {
-      "dependencies": {
-        "System.Runtime" : "",
-        "System.Collections" : ""
-      }
-    },
+    "net45": {},
     "k10": {}
   }
 }
