--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -2,7 +2,8 @@
   "version" : "0.1-alpha-*",
   "dependencies": {
     "Microsoft.AspNet.DependencyInjection" : "0.1-alpha-*",
-    "System.Security.Claims" : "0.1-alpha-*"
+    "System.Security.Claims" : "0.1-alpha-*",
+    "Microsoft.AspNet.Security.DataProtection" : "0.1-alpha-*"
   },
   "configurations": {
     "net45": {},
