--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "Microsoft.AspNet.DependencyInjection" : "0.1-alpha-*",
     "System.Security.Claims" : "0.1-alpha-*",
+    "Microsoft.AspNet.HttpFeature" : "0.1-alpha-*",
     "Microsoft.AspNet.Security.DataProtection" : "0.1-alpha-*"
   },
   "configurations": {
