--- a/src/Microsoft.AspNet.Identity.Entity/project.json
+++ b/src/Microsoft.AspNet.Identity.Entity/project.json
@@ -1,13 +1,35 @@
 {
   "version": "0.1-alpha-*",
   "dependencies": {
-    "Microsoft.AspNet.Identity": "0.1-alpha-*"
+    "Microsoft.AspNet.ConfigurationModel": "0.1-alpha-*",
+    "Microsoft.AspNet.DependencyInjection": "0.1-alpha-*",
+    "Microsoft.AspNet.Identity": "0.1-alpha-*",
+    "Microsoft.AspNet.Logging": "0.1-alpha-*",
+    "Microsoft.Data.Entity": "0.1-alpha-*",
+    "Microsoft.Data.Relational": "0.1-alpha-*",
+    "Microsoft.Data.SqlServer": "0.1-pre-*",
+    "Microsoft.Data.InMemory": "0.1-alpha-*",
+    "System.Security.Claims" : "0.1-alpha-*"
   },
   "configurations": {
     "net45": {},
     "k10": {
       "dependencies": {
-        "System.Runtime": "4.0.20.0"
+        "System.Collections": "4.0.0.0",
+        "System.ComponentModel": "4.0.0.0",
+        "System.Diagnostics.Debug": "4.0.10.0",
+        "System.Diagnostics.Tools": "4.0.0.0",
+        "System.Globalization": "4.0.10.0",
+        "System.Linq": "4.0.0.0",
+        "System.Linq.Expressions": "4.0.0.0",
+        "System.Linq.Queryable": "4.0.0.0",
+        "System.Reflection": "4.0.10.0",
+        "System.Resources.ResourceManager": "4.0.0.0",
+        "System.Runtime": "4.0.20.0",
+        "System.Runtime.Extensions": "4.0.10.0",
+        "System.Security.Principal": "4.0.0.0",
+        "System.Text.Encoding": "4.0.10.0",
+        "System.Threading.Tasks": "4.0.0.0"
       }
     }
   }
