--- a/src/Microsoft.AspNet.Identity.Entity/project.json
+++ b/src/Microsoft.AspNet.Identity.Entity/project.json
@@ -12,7 +12,12 @@
     "System.Security.Claims" : "0.1-alpha-*"
   },
   "configurations": {
-    "net45": {},
+    "net45": {
+      "dependencies": {
+        "System.Runtime": "",
+        "System.Collections": ""
+      }
+	},
     "k10": {
       "dependencies": {
         "System.Collections": "4.0.0.0",
@@ -28,8 +33,8 @@
         "System.Runtime": "4.0.20.0",
         "System.Runtime.Extensions": "4.0.10.0",
         "System.Security.Principal": "4.0.0.0",
-        "System.Text.Encoding": "4.0.10.0",
-        "System.Threading.Tasks": "4.0.0.0"
+        "System.Text.Encoding": "4.0.20.0",
+        "System.Threading.Tasks": "4.0.10.0"
       }
     }
   }
