--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -1,6 +1,7 @@
 {
   "version": "0.1-alpha-*",
   "dependencies": {
+    "Microsoft.AspNet.ConfigurationModel": "0.1-alpha-*",
     "Microsoft.AspNet.DependencyInjection" : "0.1-alpha-*",
     "System.Security.Claims" : "0.1-alpha-*",
     "Microsoft.AspNet.HttpFeature" : "0.1-alpha-*",
