--- a/src/Microsoft.AspNet.Identity.InMemory/project.json
+++ b/src/Microsoft.AspNet.Identity.InMemory/project.json
@@ -2,6 +2,10 @@
   "version": "0.1-alpha-*",
   "dependencies": {
     "Microsoft.AspNet.Identity": "0.1-alpha-*",
+    "Microsoft.AspNet.Abstractions" : "0.1-alpha-*",
+    "Microsoft.AspNet.ConfigurationModel" : "0.1-alpha-*",
+    "Microsoft.AspNet.DependencyInjection" : "0.1-alpha-*",
+    "Microsoft.AspNet.RequestContainer" : "0.1-alpha-*",
     "System.Security.Claims": "0.1-alpha-*"
   },
   "configurations": {
