--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -5,6 +5,7 @@
     "Microsoft.AspNet.Security.DataProtection" : "0.1-alpha-*",
     "Microsoft.Framework.ConfigurationModel": "0.1-alpha-*",
     "Microsoft.Framework.DependencyInjection" : "0.1-alpha-*",
+    "Microsoft.Framework.OptionsModel": "0.1-alpha-*",
     "System.Security.Claims" : "0.1-alpha-*"
   },
   "configurations": {
