--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -1,8 +1,6 @@
 {
   "version": "0.1-alpha-*",
   "dependencies": {
-    "Microsoft.AspNet.HttpFeature" : "0.1-alpha-*",
-    "Microsoft.AspNet.Security.DataProtection" : "0.1-alpha-*",
     "Microsoft.Framework.ConfigurationModel": "0.1-alpha-*",
     "Microsoft.Framework.DependencyInjection" : "0.1-alpha-*",
     "Microsoft.Framework.OptionsModel": "0.1-alpha-*",
@@ -26,6 +24,7 @@
         "System.Runtime": "4.0.20.0",
         "System.Runtime.Extensions": "4.0.10.0",
         "System.Security.Principal": "4.0.0.0",
+        "System.Security.Cryptography.DeriveBytes": "4.0.0.0",
         "System.Text.Encoding": "4.0.20.0",
         "System.Threading.Tasks": "4.0.10.0"
       }
