--- a/src/Microsoft.AspNet.Identity.InMemory/project.json
+++ b/src/Microsoft.AspNet.Identity.InMemory/project.json
@@ -1,9 +1,9 @@
 {
-  "version": "0.1-alpha-*",
+  "version": "3.0.0-*",
   "dependencies": {
-    "Microsoft.AspNet.Identity": "",
-    "Microsoft.Framework.DependencyInjection" : "0.1-alpha-*",
-    "System.Security.Claims": "0.1-alpha-*"
+    "Microsoft.Framework.Identity": "",
+    "Microsoft.Framework.DependencyInjection" : "1.0.0-*",
+    "System.Security.Claims": "1.0.0-*"
   },
   "configurations": {
     "net45": {},
