--- a/src/Microsoft.Framework.Identity.AspNet/project.json
+++ b/src/Microsoft.Framework.Identity.AspNet/project.json
@@ -1,23 +1,14 @@
 {
-  "version": "0.1-alpha-*",
+  "version": "3.0.0-*",
   "dependencies": {
-    "Microsoft.AspNet.Identity": "",
-    "Microsoft.Data.Entity": "0.1-alpha-*",
-    "Microsoft.Data.Entity.InMemory": "0.1-alpha-*",
-    "Microsoft.Data.Entity.Relational": "0.1-alpha-*",
-    "Microsoft.Data.Entity.SqlServer": "0.1-alpha-*",
-    "Microsoft.Framework.ConfigurationModel": "0.1-alpha-*",
-    "Microsoft.Framework.DependencyInjection": "0.1-alpha-*",
-    "System.Security.Claims" : "0.1-alpha-*"
+    "Microsoft.AspNet.Http" : "1.0.0-*",
+    "Microsoft.Framework.Identity" : "",
+    "Microsoft.AspNet.Security.DataProtection" : "1.0.0-*",
+    "Microsoft.Framework.DependencyInjection" : "1.0.0-*",
+    "System.Security.Claims" : "1.0.0-*"
   },
   "configurations": {
-    "net451": {
-      "dependencies": {
-        "System.Collections": "",
-        "System.Data": "",
-        "System.Runtime": ""
-      }
-    },
+    "net45": {},
     "k10": {
       "dependencies": {
         "System.Collections": "4.0.0.0",
@@ -27,7 +18,6 @@
         "System.Globalization": "4.0.10.0",
         "System.Linq": "4.0.0.0",
         "System.Linq.Expressions": "4.0.0.0",
-        "System.Linq.Queryable": "4.0.0.0",
         "System.Reflection": "4.0.10.0",
         "System.Resources.ResourceManager": "4.0.0.0",
         "System.Runtime": "4.0.20.0",
