--- a/src/Microsoft.AspNet.Identity.Authentication/project.json
+++ b/src/Microsoft.AspNet.Identity.Authentication/project.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "Microsoft.AspNet.Http" : "1.0.0-*",
     "Microsoft.AspNet.Identity" : "",
-    "Microsoft.AspNet.Security.DataProtection" : "1.0.0-*",
+    "Microsoft.AspNet.Security.Cookies" : "1.0.0-*",
     "Microsoft.Framework.DependencyInjection" : "1.0.0-*",
     "System.Security.Claims" : "1.0.0-*"
   },
