--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -18,6 +18,7 @@
         "System.Linq": "4.0.0.0",
         "System.Linq.Expressions": "4.0.0.0",
         "System.Linq.Queryable": "4.0.0.0",
+        "System.Net.Primitives": "4.0.10.0",
         "System.Reflection": "4.0.10.0",
         "System.Reflection.Extensions": "4.0.0.0",
         "System.Resources.ResourceManager": "4.0.0.0",
@@ -25,7 +26,10 @@
         "System.Runtime.Extensions": "4.0.10.0",
         "System.Security.Principal": "4.0.0.0",
         "System.Security.Cryptography.DeriveBytes": "4.0.0.0",
+        "System.Security.Cryptography.Hashing": "4.0.0.0",
+        "System.Security.Cryptography.Hashing.Algorithms": "4.0.0.0",
         "System.Text.Encoding": "4.0.20.0",
+        "System.Text.Encoding.Extensions": "4.0.10.0",
         "System.Threading.Tasks": "4.0.10.0"
       }
     }
