--- a/samples/IdentitySample.Mvc/project.json
+++ b/samples/IdentitySample.Mvc/project.json
@@ -12,14 +12,15 @@
         "Microsoft.AspNet.Identity.SqlServer": "3.0.0-*",
         "Microsoft.AspNet.Identity.Authentication": "3.0.0-*",
         "Microsoft.AspNet.Security.Cookies": "1.0.0-*",
+        "Microsoft.AspNet.Security.Google": "1.0.0-*",
         "Microsoft.AspNet.StaticFiles": "1.0.0-*",
         "EntityFramework.SqlServer": "7.0.0-*",
         "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-*",
         "Microsoft.Framework.OptionsModel": "1.0.0-*"
     },
     "commands": {
-        "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5002",
-        "run": "run server.urls=http://localhost:5003"
+        "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:41532",
+        "run": "run server.urls=http://localhost:41532"
     },
     "frameworks": {
         "aspnet50": {
