Update to fix tests and renames

--- a/samples/IdentitySample.Mvc/project.json
+++ b/samples/IdentitySample.Mvc/project.json
@@ -24,7 +24,9 @@
         "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:41532",
         "run": "run server.urls=http://localhost:41532"
     },
-    "webroot": ".",
+    "wwwroot": {
+        "k.ini" : ""
+    },
     "frameworks": {
         "aspnet50": {
         },
