Updating stores to use TypeDescriptor for type conversion

--- a/src/Microsoft.AspNet.Identity.EntityFramework/project.json
+++ b/src/Microsoft.AspNet.Identity.EntityFramework/project.json
@@ -12,6 +12,7 @@
       "dependencies": {
         "System.Collections": "4.0.10-beta-*",
         "System.ComponentModel": "4.0.0-beta-*",
+        "System.ComponentModel.TypeConverter": "4.0.0-beta-*",
         "System.Diagnostics.Debug": "4.0.10-beta-*",
         "System.Diagnostics.Tools": "4.0.0-beta-*",
         "System.Globalization": "4.0.10-beta-*",
