--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -1,45 +1,45 @@
 {
-  "version": "3.0.0-*",
+  "version": "3.0.0-beta4",
   "dependencies": {
-    "Microsoft.AspNet.Authentication" : "1.0.0-*",
-    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-*",
-    "Microsoft.AspNet.Cryptography.KeyDerivation": "1.0.0-*",
-    "Microsoft.AspNet.Http" : "1.0.0-*",
-    "Microsoft.AspNet.Hosting" : "1.0.0-*",
-    "Microsoft.AspNet.Hosting.Interfaces" : "1.0.0-*",
-    "Microsoft.Framework.ConfigurationModel.Interfaces": "1.0.0-*",
-    "Microsoft.Framework.DependencyInjection.Interfaces" : "1.0.0-*",
-    "Microsoft.Framework.Logging.Interfaces": "1.0.0-*",
-    "Microsoft.Framework.OptionsModel": "1.0.0-*"
+    "Microsoft.AspNet.Authentication" : "1.0.0-beta4",
+    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta4",
+    "Microsoft.AspNet.Cryptography.KeyDerivation": "1.0.0-beta4",
+    "Microsoft.AspNet.Http" : "1.0.0-beta4",
+    "Microsoft.AspNet.Hosting" : "1.0.0-beta4",
+    "Microsoft.AspNet.Hosting.Interfaces" : "1.0.0-beta4",
+    "Microsoft.Framework.ConfigurationModel.Interfaces": "1.0.0-beta4",
+    "Microsoft.Framework.DependencyInjection.Interfaces" : "1.0.0-beta4",
+    "Microsoft.Framework.Logging.Interfaces": "1.0.0-beta4",
+    "Microsoft.Framework.OptionsModel": "1.0.0-beta4"
   },
   "frameworks": {
     "dnx451": {},
     "dnxcore50": {
       "dependencies": {
-        "System.Collections": "4.0.10-beta-*",
-        "System.ComponentModel": "4.0.0-beta-*",
-        "System.Diagnostics.Debug": "4.0.10-beta-*",
-        "System.Diagnostics.Tools": "4.0.0-beta-*",
-        "System.Globalization": "4.0.10-beta-*",
-        "System.Globalization.Extensions": "4.0.0-beta-*",
-        "System.Linq": "4.0.0-beta-*",
-        "System.Linq.Expressions": "4.0.10-beta-*",
-        "System.Linq.Queryable": "4.0.0-beta-*",
-        "System.Net.Primitives": "4.0.10-beta-*",
-        "System.Reflection": "4.0.10-beta-*",
-        "System.Reflection.Extensions": "4.0.0-beta-*",
-        "System.Resources.ResourceManager": "4.0.0-beta-*",
-        "System.Runtime": "4.0.20-beta-*",
-        "System.Runtime.Extensions": "4.0.10-beta-*",
-        "System.Security.Claims": "4.0.0-beta-*",
-        "System.Security.Cryptography.Hashing": "4.0.0-beta-*",
-        "System.Security.Cryptography.Hashing.Algorithms": "4.0.0-beta-*",
-        "System.Security.Cryptography.RandomNumberGenerator": "4.0.0-beta-*",
-        "System.Security.Principal": "4.0.0-beta-*",
-        "System.Text.Encoding": "4.0.10-beta-*",
-        "System.Text.Encoding.Extensions": "4.0.10-beta-*",
-        "System.Text.RegularExpressions": "4.0.10-beta-*",
-        "System.Threading.Tasks": "4.0.10-beta-*"
+        "System.Collections": "4.0.10-beta-22816",
+        "System.ComponentModel": "4.0.0-beta-22816",
+        "System.Diagnostics.Debug": "4.0.10-beta-22816",
+        "System.Diagnostics.Tools": "4.0.0-beta-22816",
+        "System.Globalization": "4.0.10-beta-22816",
+        "System.Globalization.Extensions": "4.0.0-beta-22816",
+        "System.Linq": "4.0.0-beta-22816",
+        "System.Linq.Expressions": "4.0.10-beta-22816",
+        "System.Linq.Queryable": "4.0.0-beta-22816",
+        "System.Net.Primitives": "4.0.10-beta-22816",
+        "System.Reflection": "4.0.10-beta-22816",
+        "System.Reflection.Extensions": "4.0.0-beta-22816",
+        "System.Resources.ResourceManager": "4.0.0-beta-22816",
+        "System.Runtime": "4.0.20-beta-22816",
+        "System.Runtime.Extensions": "4.0.10-beta-22816",
+        "System.Security.Claims": "4.0.0-beta-22816",
+        "System.Security.Cryptography.Hashing": "4.0.0-beta-22816",
+        "System.Security.Cryptography.Hashing.Algorithms": "4.0.0-beta-22816",
+        "System.Security.Cryptography.RandomNumberGenerator": "4.0.0-beta-22816",
+        "System.Security.Principal": "4.0.0-beta-22816",
+        "System.Text.Encoding": "4.0.10-beta-22816",
+        "System.Text.Encoding.Extensions": "4.0.10-beta-22816",
+        "System.Text.RegularExpressions": "4.0.10-beta-22816",
+        "System.Threading.Tasks": "4.0.10-beta-22816"
       }
     }
   }
