--- a/src/Microsoft.AspNet.Identity.EntityFramework/project.json
+++ b/src/Microsoft.AspNet.Identity.EntityFramework/project.json
@@ -1,8 +1,8 @@
 {
-  "version": "3.0.0-*",
+  "version": "3.0.0-beta5",
   "dependencies": {
-    "Microsoft.AspNet.Identity": "3.0.0-*",
-    "EntityFramework.SqlServer": "7.0.0-*"
+    "Microsoft.AspNet.Identity": "3.0.0-beta5",
+    "EntityFramework.SqlServer": "7.0.0-beta5"
   },
   "frameworks": {
     "dnx451": {
@@ -12,23 +12,23 @@
     },
     "dnxcore50": {
       "dependencies": {
-        "System.Collections": "4.0.10-beta-*",
-        "System.ComponentModel": "4.0.0-beta-*",
-        "System.ComponentModel.TypeConverter": "4.0.0-beta-*",
-        "System.Diagnostics.Debug": "4.0.10-beta-*",
-        "System.Diagnostics.Tools": "4.0.0-beta-*",
-        "System.Globalization": "4.0.10-beta-*",
-        "System.Linq": "4.0.0-beta-*",
-        "System.Linq.Expressions": "4.0.10-beta-*",
-        "System.Linq.Queryable": "4.0.0-beta-*",
-        "System.Reflection": "4.0.10-beta-*",
-        "System.Resources.ResourceManager": "4.0.0-beta-*",
-        "System.Runtime": "4.0.20-beta-*",
-        "System.Runtime.Extensions": "4.0.10-beta-*",
-        "System.Security.Claims": "4.0.0-beta-*",
-        "System.Security.Principal": "4.0.0-beta-*",
-        "System.Text.Encoding": "4.0.10-beta-*",
-        "System.Threading.Tasks": "4.0.10-beta-*"
+        "System.Collections": "4.0.10-beta-23019",
+        "System.ComponentModel": "4.0.0-beta-23019",
+        "System.ComponentModel.TypeConverter": "4.0.0-beta-23019",
+        "System.Diagnostics.Debug": "4.0.10-beta-23019",
+        "System.Diagnostics.Tools": "4.0.0-beta-23019",
+        "System.Globalization": "4.0.10-beta-23019",
+        "System.Linq": "4.0.0-beta-23019",
+        "System.Linq.Expressions": "4.0.10-beta-23019",
+        "System.Linq.Queryable": "4.0.0-beta-23019",
+        "System.Reflection": "4.0.10-beta-23019",
+        "System.Resources.ResourceManager": "4.0.0-beta-23019",
+        "System.Runtime": "4.0.20-beta-23019",
+        "System.Runtime.Extensions": "4.0.10-beta-23019",
+        "System.Security.Claims": "4.0.0-beta-23019",
+        "System.Security.Principal": "4.0.0-beta-23019",
+        "System.Text.Encoding": "4.0.10-beta-23019",
+        "System.Threading.Tasks": "4.0.10-beta-23019"
       }
     }
   }
