--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -1,33 +1,33 @@
 {
-  "version": "3.0.0-*",
+  "version": "3.0.0-beta5",
   "dependencies": {
-    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-*",
-    "Microsoft.AspNet.Cryptography.KeyDerivation": "1.0.0-*",
-    "Microsoft.AspNet.DataProtection": "1.0.0-*",
-    "Microsoft.AspNet.Hosting.Abstractions" : "1.0.0-*"
+    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta5",
+    "Microsoft.AspNet.Cryptography.KeyDerivation": "1.0.0-beta5",
+    "Microsoft.AspNet.DataProtection": "1.0.0-beta5",
+    "Microsoft.AspNet.Hosting.Abstractions" : "1.0.0-beta5"
   },
   "frameworks": {
     "dnx451": {},
     "dnxcore50": {
       "dependencies": {
-        "System.Collections": "4.0.10-beta-*",
-        "System.ComponentModel": "4.0.0-beta-*",
-        "System.Diagnostics.Debug": "4.0.10-beta-*",
-        "System.Diagnostics.Tools": "4.0.0-beta-*",
-        "System.Globalization": "4.0.10-beta-*",
-        "System.Globalization.Extensions": "4.0.0-beta-*",
-        "System.Linq.Expressions": "4.0.10-beta-*",
-        "System.Linq.Queryable": "4.0.0-beta-*",
-        "System.Net.Primitives": "4.0.10-beta-*",
-        "System.Reflection": "4.0.10-beta-*",
-        "System.Resources.ResourceManager": "4.0.0-beta-*",
-        "System.Runtime": "4.0.20-beta-*",
-        "System.Security.Claims": "4.0.0-beta-*",
-        "System.Security.Cryptography.Hashing": "4.0.0-beta-*",
-        "System.Security.Principal": "4.0.0-beta-*",
-        "System.Text.Encoding": "4.0.10-beta-*",
-        "System.Text.RegularExpressions": "4.0.10-beta-*",
-        "System.Threading.Tasks": "4.0.10-beta-*"
+        "System.Collections": "4.0.10-beta-23019",
+        "System.ComponentModel": "4.0.0-beta-23019",
+        "System.Diagnostics.Debug": "4.0.10-beta-23019",
+        "System.Diagnostics.Tools": "4.0.0-beta-23019",
+        "System.Globalization": "4.0.10-beta-23019",
+        "System.Globalization.Extensions": "4.0.0-beta-23019",
+        "System.Linq.Expressions": "4.0.10-beta-23019",
+        "System.Linq.Queryable": "4.0.0-beta-23019",
+        "System.Net.Primitives": "4.0.10-beta-23019",
+        "System.Reflection": "4.0.10-beta-23019",
+        "System.Resources.ResourceManager": "4.0.0-beta-23019",
+        "System.Runtime": "4.0.20-beta-23019",
+        "System.Security.Claims": "4.0.0-beta-23019",
+        "System.Security.Cryptography.Hashing": "4.0.0-beta-23019",
+        "System.Security.Principal": "4.0.0-beta-23019",
+        "System.Text.Encoding": "4.0.10-beta-23019",
+        "System.Text.RegularExpressions": "4.0.10-beta-23019",
+        "System.Threading.Tasks": "4.0.10-beta-23019"
       }
     }
   }
