--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -1,38 +1,38 @@
 {
-  "version": "3.0.0-*",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/aspnet/identity"
-  },
-  "dependencies": {
-    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-*",
-    "Microsoft.AspNet.Cryptography.KeyDerivation": "1.0.0-*",
-    "Microsoft.AspNet.DataProtection": "1.0.0-*",
-    "Microsoft.AspNet.Hosting.Abstractions" : "1.0.0-*"
-  },
-  "frameworks": {
-    "dnx451": {},
-    "dnxcore50": {
-      "dependencies": {
-        "System.Collections": "4.0.10-beta-*",
-        "System.ComponentModel": "4.0.0-beta-*",
-        "System.Diagnostics.Debug": "4.0.10-beta-*",
-        "System.Diagnostics.Tools": "4.0.0-beta-*",
-        "System.Globalization": "4.0.10-beta-*",
-        "System.Globalization.Extensions": "4.0.0-beta-*",
-        "System.Linq.Expressions": "4.0.10-beta-*",
-        "System.Linq.Queryable": "4.0.0-beta-*",
-        "System.Net.Primitives": "4.0.10-beta-*",
-        "System.Reflection": "4.0.10-beta-*",
-        "System.Resources.ResourceManager": "4.0.0-beta-*",
-        "System.Runtime": "4.0.20-beta-*",
-        "System.Security.Claims": "4.0.0-beta-*",
-        "System.Security.Cryptography.Hashing": "4.0.0-beta-*",
-        "System.Security.Principal": "4.0.0-beta-*",
-        "System.Text.Encoding": "4.0.10-beta-*",
-        "System.Text.RegularExpressions": "4.0.10-beta-*",
-        "System.Threading.Tasks": "4.0.10-beta-*"
-      }
+    "version": "3.0.0-beta6",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/aspnet/identity"
+    },
+    "dependencies": {
+        "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta6",
+        "Microsoft.AspNet.Cryptography.KeyDerivation": "1.0.0-beta6",
+        "Microsoft.AspNet.DataProtection": "1.0.0-beta6",
+        "Microsoft.AspNet.Hosting.Abstractions": "1.0.0-beta6"
+    },
+    "frameworks": {
+        "dnx451": {},
+        "dnxcore50": {
+            "dependencies": {
+                "System.Collections": "4.0.10-beta-23109",
+                "System.ComponentModel": "4.0.0-beta-23109",
+                "System.Diagnostics.Debug": "4.0.10-beta-23109",
+                "System.Diagnostics.Tools": "4.0.0-beta-23109",
+                "System.Globalization": "4.0.10-beta-23109",
+                "System.Globalization.Extensions": "4.0.0-beta-23109",
+                "System.Linq.Expressions": "4.0.10-beta-23109",
+                "System.Linq.Queryable": "4.0.0-beta-23109",
+                "System.Net.Primitives": "4.0.10-beta-23109",
+                "System.Reflection": "4.0.10-beta-23109",
+                "System.Resources.ResourceManager": "4.0.0-beta-23109",
+                "System.Runtime": "4.0.20-beta-23109",
+                "System.Security.Claims": "4.0.0-beta-23109",
+                "System.Security.Cryptography.Hashing": "4.0.0-beta-23109",
+                "System.Security.Principal": "4.0.0-beta-23109",
+                "System.Text.Encoding": "4.0.10-beta-23109",
+                "System.Text.RegularExpressions": "4.0.10-beta-23109",
+                "System.Threading.Tasks": "4.0.10-beta-23109"
+            }
+        }
     }
-  }
 }
