--- a/samples/IdentitySample.Mvc/project.json
+++ b/samples/IdentitySample.Mvc/project.json
@@ -5,23 +5,23 @@
     "description": "Identity sample MVC application on K",
     "version": "1.0.0-*",
     "dependencies": {
-        "Microsoft.AspNet.Server.IIS": "1.0.0-*",
-        "Microsoft.AspNet.Mvc": "6.0.0-*",
-        "Microsoft.AspNet.Server.WebListener": "1.0.0-*",
-        "Microsoft.AspNet.Diagnostics": "1.0.0-*",
-        "Microsoft.AspNet.Identity": "3.0.0-*",
-        "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-*",
-        "Microsoft.AspNet.Authentication.Cookies": "1.0.0-*",
-        "Microsoft.AspNet.Authentication.Facebook": "1.0.0-*",
-        "Microsoft.AspNet.Authentication.Google": "1.0.0-*",
-        "Microsoft.AspNet.Authentication.Twitter": "1.0.0-*",
-        "Microsoft.AspNet.Authorization": "1.0.0-*",
-        "Microsoft.AspNet.StaticFiles": "1.0.0-*",
-        "EntityFramework.SqlServer": "7.0.0-*",
-        "Microsoft.Framework.Configuration.EnvironmentVariables": "1.0.0-*",
-        "Microsoft.Framework.Configuration.Json": "1.0.0-*",
-        "Microsoft.Framework.OptionsModel": "1.0.0-*",
-        "Microsoft.Framework.Logging.Console": "1.0.0-*"
+        "Microsoft.AspNet.Server.IIS": "1.0.0-beta7",
+        "Microsoft.AspNet.Mvc": "6.0.0-beta7",
+        "Microsoft.AspNet.Server.WebListener": "1.0.0-beta7",
+        "Microsoft.AspNet.Diagnostics": "1.0.0-beta7",
+        "Microsoft.AspNet.Identity": "3.0.0-beta7",
+        "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7",
+        "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta7",
+        "Microsoft.AspNet.Authentication.Facebook": "1.0.0-beta7",
+        "Microsoft.AspNet.Authentication.Google": "1.0.0-beta7",
+        "Microsoft.AspNet.Authentication.Twitter": "1.0.0-beta7",
+        "Microsoft.AspNet.Authorization": "1.0.0-beta7",
+        "Microsoft.AspNet.StaticFiles": "1.0.0-beta7",
+        "EntityFramework.SqlServer": "7.0.0-beta7",
+        "Microsoft.Framework.Configuration.EnvironmentVariables": "1.0.0-beta7",
+        "Microsoft.Framework.Configuration.Json": "1.0.0-beta7",
+        "Microsoft.Framework.OptionsModel": "1.0.0-beta7",
+        "Microsoft.Framework.Logging.Console": "1.0.0-beta7"
     },
     "commands": {
         "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:41532",
@@ -31,10 +31,9 @@
     "frameworks": {
         "dnx451": {
             "dependencies": {
-                "Microsoft.Framework.Logging.NLog": "1.0.0-*"
+                "Microsoft.Framework.Logging.NLog": "1.0.0-beta7"
             }
         },
-        "dnxcore50": {
-        }
+        "dnxcore50": {}
     }
 }
