--- a/src/Microsoft.AspNet.Identity.EntityFramework/project.json
+++ b/src/Microsoft.AspNet.Identity.EntityFramework/project.json
@@ -1,39 +1,39 @@
 {
-  "version": "3.0.0-*",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/aspnet/identity"
-  },
-  "dependencies": {
-    "Microsoft.AspNet.Identity": "3.0.0-*",
-    "EntityFramework.SqlServer": "7.0.0-*"
-  },
-  "frameworks": {
-    "dnx451": {
-      "frameworkAssemblies": {
-        "System.Threading.Tasks": ""
-      }
+    "version": "3.0.0-beta7",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/aspnet/identity"
     },
-    "dnxcore50": {
-      "dependencies": {
-        "System.Collections": "4.0.11-beta-*",
-        "System.ComponentModel": "4.0.1-beta-*",
-        "System.ComponentModel.TypeConverter": "4.0.1-beta-*",
-        "System.Diagnostics.Debug": "4.0.11-beta-*",
-        "System.Diagnostics.Tools": "4.0.1-beta-*",
-        "System.Globalization": "4.0.11-beta-*",
-        "System.Linq": "4.0.1-beta-*",
-        "System.Linq.Expressions": "4.0.11-beta-*",
-        "System.Linq.Queryable": "4.0.1-beta-*",
-        "System.Reflection": "4.0.11-beta-*",
-        "System.Resources.ResourceManager": "4.0.1-beta-*",
-        "System.Runtime": "4.0.21-beta-*",
-        "System.Runtime.Extensions": "4.0.11-beta-*",
-        "System.Security.Claims": "4.0.1-beta-*",
-        "System.Security.Principal": "4.0.1-beta-*",
-        "System.Text.Encoding": "4.0.11-beta-*",
-        "System.Threading.Tasks": "4.0.11-beta-*"
-      }
+    "dependencies": {
+        "Microsoft.AspNet.Identity": "3.0.0-beta7",
+        "EntityFramework.SqlServer": "7.0.0-beta7"
+    },
+    "frameworks": {
+        "dnx451": {
+            "frameworkAssemblies": {
+                "System.Threading.Tasks": ""
+            }
+        },
+        "dnxcore50": {
+            "dependencies": {
+                "System.Collections": "4.0.11-beta-23225",
+                "System.ComponentModel": "4.0.1-beta-23225",
+                "System.ComponentModel.TypeConverter": "4.0.1-beta-23225",
+                "System.Diagnostics.Debug": "4.0.11-beta-23225",
+                "System.Diagnostics.Tools": "4.0.1-beta-23225",
+                "System.Globalization": "4.0.11-beta-23225",
+                "System.Linq": "4.0.1-beta-23225",
+                "System.Linq.Expressions": "4.0.11-beta-23225",
+                "System.Linq.Queryable": "4.0.1-beta-23225",
+                "System.Reflection": "4.1.0-beta-23225",
+                "System.Resources.ResourceManager": "4.0.1-beta-23225",
+                "System.Runtime": "4.0.21-beta-23225",
+                "System.Runtime.Extensions": "4.0.11-beta-23225",
+                "System.Security.Claims": "4.0.1-beta-23225",
+                "System.Security.Principal": "4.0.1-beta-23225",
+                "System.Text.Encoding": "4.0.11-beta-23225",
+                "System.Threading.Tasks": "4.0.11-beta-23225"
+            }
+        }
     }
-  }
 }
