--- a/samples/IdentitySample.Mvc/project.json
+++ b/samples/IdentitySample.Mvc/project.json
@@ -17,6 +17,7 @@
         "Microsoft.AspNet.Authentication.Twitter": "1.0.0-*",
         "Microsoft.AspNet.Authorization": "1.0.0-*",
         "Microsoft.AspNet.StaticFiles": "1.0.0-*",
+        "EntityFramework.Commands": "7.0.0-*",
         "EntityFramework.MicrosoftSqlServer": "7.0.0-*",
         "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0-*",
         "Microsoft.Extensions.Configuration.Json": "1.0.0-*",
@@ -25,7 +26,8 @@
     },
     "commands": {
         "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:41532",
-        "run": "run server.urls=http://localhost:41532"
+        "run": "run server.urls=http://localhost:41532",
+        "ef": "EntityFramework.Commands"
     },
     "webroot": ".",
     "frameworks": {
