--- a/src/Microsoft.AspNet.Identity.EntityFramework/project.json
+++ b/src/Microsoft.AspNet.Identity.EntityFramework/project.json
@@ -1,6 +1,6 @@
 {
   "description": "ASP.NET Identity providers that use Entity Framework.",
-  "version": "3.0.0-*",
+  "version": "3.0.0-rc1-final",
   "compilationOptions": {
     "warningsAsErrors": true,
     "keyFile": "../../tools/Key.snk"
@@ -10,8 +10,8 @@
     "url": "git://github.com/aspnet/identity"
   },
   "dependencies": {
-    "Microsoft.AspNet.Identity": "3.0.0-*",
-    "EntityFramework.Relational": "7.0.0-*"
+    "Microsoft.AspNet.Identity": "3.0.0-rc1-final",
+    "EntityFramework.Relational": "7.0.0-rc1-final"
   },
   "frameworks": {
     "net451": {
@@ -22,23 +22,23 @@
     },
     "dotnet5.4": {
       "dependencies": {
-        "System.Collections": "4.0.11-beta-*",
-        "System.ComponentModel": "4.0.1-beta-*",
-        "System.ComponentModel.TypeConverter": "4.0.1-beta-*",
-        "System.Diagnostics.Debug": "4.0.11-beta-*",
-        "System.Diagnostics.Tools": "4.0.1-beta-*",
-        "System.Globalization": "4.0.11-beta-*",
-        "System.Linq": "4.0.1-beta-*",
-        "System.Linq.Expressions": "4.0.11-beta-*",
-        "System.Linq.Queryable": "4.0.1-beta-*",
-        "System.Reflection": "4.0.11-beta-*",
-        "System.Resources.ResourceManager": "4.0.1-beta-*",
-        "System.Runtime": "4.0.21-beta-*",
-        "System.Runtime.Extensions": "4.0.11-beta-*",
-        "System.Security.Claims": "4.0.1-beta-*",
-        "System.Security.Principal": "4.0.1-beta-*",
-        "System.Text.Encoding": "4.0.11-beta-*",
-        "System.Threading.Tasks": "4.0.11-beta-*"
+        "System.Collections": "4.0.11-beta-23516",
+        "System.ComponentModel": "4.0.1-beta-23516",
+        "System.ComponentModel.TypeConverter": "4.0.1-beta-23516",
+        "System.Diagnostics.Debug": "4.0.11-beta-23516",
+        "System.Diagnostics.Tools": "4.0.1-beta-23516",
+        "System.Globalization": "4.0.11-beta-23516",
+        "System.Linq": "4.0.1-beta-23516",
+        "System.Linq.Expressions": "4.0.11-beta-23516",
+        "System.Linq.Queryable": "4.0.1-beta-23516",
+        "System.Reflection": "4.1.0-beta-23516",
+        "System.Resources.ResourceManager": "4.0.1-beta-23516",
+        "System.Runtime": "4.0.21-beta-23516",
+        "System.Runtime.Extensions": "4.0.11-beta-23516",
+        "System.Security.Claims": "4.0.1-beta-23516",
+        "System.Security.Principal": "4.0.1-beta-23516",
+        "System.Text.Encoding": "4.0.11-beta-23516",
+        "System.Threading.Tasks": "4.0.11-beta-23516"
       }
     }
   }
