--- a/src/Microsoft.AspNet.Identity/project.json
+++ b/src/Microsoft.AspNet.Identity/project.json
@@ -1,6 +1,6 @@
 {
   "description": "Core implementation for ASP.NET Identity.",
-  "version": "3.0.0-*",
+  "version": "3.0.0-rc1-final",
   "compilationOptions": {
     "warningsAsErrors": true,
     "keyFile": "../../tools/Key.snk"
@@ -10,22 +10,22 @@
     "url": "git://github.com/aspnet/identity"
   },
   "dependencies": {
-    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-*",
-    "Microsoft.AspNet.Cryptography.KeyDerivation": "1.0.0-*",
-    "Microsoft.AspNet.Hosting.Abstractions": "1.0.0-*"
+    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Cryptography.KeyDerivation": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Hosting.Abstractions": "1.0.0-rc1-final"
   },
   "frameworks": {
     "net451": {},
     "dotnet5.4": {
       "dependencies": {
-        "System.ComponentModel": "4.0.1-beta-*",
-        "System.Diagnostics.Debug": "4.0.11-beta-*",
-        "System.Diagnostics.Tools": "4.0.1-beta-*",
-        "System.Globalization.Extensions": "4.0.1-beta-*",
-        "System.Linq.Expressions": "4.0.11-beta-*",
-        "System.Linq.Queryable": "4.0.1-beta-*",
-        "System.Text.Encoding": "4.0.11-beta-*",
-        "System.Text.RegularExpressions": "4.0.11-beta-*"
+        "System.ComponentModel": "4.0.1-beta-23516",
+        "System.Diagnostics.Debug": "4.0.11-beta-23516",
+        "System.Diagnostics.Tools": "4.0.1-beta-23516",
+        "System.Globalization.Extensions": "4.0.1-beta-23516",
+        "System.Linq.Expressions": "4.0.11-beta-23516",
+        "System.Linq.Queryable": "4.0.1-beta-23516",
+        "System.Text.Encoding": "4.0.11-beta-23516",
+        "System.Text.RegularExpressions": "4.0.11-beta-23516"
       }
     }
   }
