Updated working interop checkpoint

--- a/samples/Interop45/Interop45.csproj
+++ b/samples/Interop45/Interop45.csproj
@@ -225,12 +225,35 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Compat\CompatDbContext.cs" />
+    <Compile Include="Compat\CompatRole.cs" />
+    <Compile Include="Compat\CompatRoleClaim.cs" />
+    <Compile Include="Compat\CompatUser.cs" />
+    <Compile Include="Compat\CompatUserLogin.cs" />
+    <Compile Include="Compat\CompatUserStore.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511031830242_InitialCreate.cs" />
+    <Compile Include="Migrations\201511031830242_InitialCreate.Designer.cs">
+      <DependentUpon>201511031830242_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201511232040531_Identity3Migration.cs" />
+    <Compile Include="Migrations\201511232040531_Identity3Migration.Designer.cs">
+      <DependentUpon>201511232040531_Identity3Migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201511232057540_IdentityV3Schema.cs" />
+    <Compile Include="Migrations\201511232057540_IdentityV3Schema.Designer.cs">
+      <DependentUpon>201511232057540_IdentityV3Schema.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201511232103169_Identity3Migration1.cs" />
+    <Compile Include="Migrations\201511232103169_Identity3Migration1.Designer.cs">
+      <DependentUpon>201511232103169_Identity3Migration1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -303,6 +326,20 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201511031830242_InitialCreate.resx">
+      <DependentUpon>201511031830242_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511232040531_Identity3Migration.resx">
+      <DependentUpon>201511232040531_Identity3Migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511232057540_IdentityV3Schema.resx">
+      <DependentUpon>201511232057540_IdentityV3Schema.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511232103169_Identity3Migration1.resx">
+      <DependentUpon>201511232103169_Identity3Migration1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
