Turn on xplat tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,10 @@ addons:
     - libunwind8
     - zlib1g
 env:
-  - KOREBUILD_DNU_RESTORE_CORECLR=true
+  - KOREBUILD_DNU_RESTORE_CORECLR=true KOREBUILD_TEST_DNXCORE=true
+os:
+  - linux
+  - osx
 mono:
   - 4.0.5
 script:
