--- a/samples/IdentitySample.Mvc/project.json
+++ b/samples/IdentitySample.Mvc/project.json
@@ -34,8 +34,8 @@
     "web": "IdentitySample.Mvc"
   },
   "frameworks": {
-    "dnx451": {},
-    "dnxcore50": {}
+    "net451": {},
+    "dotnet5.6": {}
   },
   "exclude": [
     "wwwroot",
