Included role store implementation

--- a/src/Microsoft.AspNetCore.Identity.EntityFramework6/project.json
+++ b/src/Microsoft.AspNetCore.Identity.EntityFramework6/project.json
@@ -28,6 +28,12 @@
   },
 
   "frameworks": {
-    "net451": {}
+    "net451": {
+      "frameworkAssemblies": {
+        "System.Data": {
+          "type": "build"
+        }
+      }
+    }
   }
 }
