working on tests

--- a/samples/IdentitySample.Mvc/project.json
+++ b/samples/IdentitySample.Mvc/project.json
@@ -12,28 +12,28 @@
     "Microsoft.AspNetCore.Authorization": "1.1.0-*",
     "Microsoft.AspNetCore.DataProtection.Extensions": "1.1.0-*",
     "Microsoft.AspNetCore.Diagnostics": "1.1.0-*",
-    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0-*",
     "Microsoft.AspNetCore.Identity": "1.1.0-*",
-    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.0-*",
     "Microsoft.AspNetCore.Mvc": "1.1.0-*",
     "Microsoft.AspNetCore.Mvc.TagHelpers": "1.1.0-*",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0-*",
     "Microsoft.AspNetCore.Server.Kestrel": "1.1.0-*",
     "Microsoft.AspNetCore.StaticFiles": "1.1.0-*",
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0-*",
-    "Microsoft.EntityFrameworkCore.Tools": {
-      "version": "1.0.0-*",
-      "type": "build"
-    },
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0-*",
     "Microsoft.Extensions.Configuration.Json": "1.1.0-*",
     "Microsoft.Extensions.Configuration.UserSecrets": "1.1.0-*",
     "Microsoft.Extensions.Logging.Console": "1.1.0-*",
-    "Microsoft.Extensions.Logging.Debug": "1.1.0-*"
+			"Microsoft.Extensions.Logging.Debug": "1.1.0-*",
+
+			"LinqToDB.Identity": "1.1.0-*"
   },
   "buildOptions": {
     "emitEntryPoint": true,
-    "preserveCompilationContext": true
+			"preserveCompilationContext": true,
+			"compile": {
+							"exclude": [
+								"./Data/Migrations/*.cs"
+							]
+			}
   },
   "frameworks": {
     "net451": {},
