Updating partner package versions

--- a/samples/IdentitySample.Mvc/project.json
+++ b/samples/IdentitySample.Mvc/project.json
@@ -47,7 +47,7 @@
           "type": "build"
         },
         "Microsoft.NETCore.App": {
-          "version": "1.0.0",
+          "version": "1.0.3-*",
           "type": "platform"
         }
       }
